--- a/笔记.md
+++ b/笔记.md
@@ -27,4 +27,7 @@ config.gpu_options.per_process_gpu_memory_fraction = 0.4
 ```Python
 session = tf.Session(config=config)
 ```
-
+## TensorFlow中一些常用函数的用法与区别
+**1.tf.argmax和tf.reduce_max**  
+tf.argmax(values,axis):返回values在axis维度最大值的索引  
+tf. reduce_max(values,axis):返回values在axis维度的最大值  
