--- a/笔记.md
+++ b/笔记.md
@@ -26,7 +26,18 @@ config.gpu_options.per_process_gpu_memory_fraction = 0.4
 3.再将以上配置传入会话中，即可使用，前提是存在gpu
 ```Python
 session = tf.Session(config=config)
-```
+``` 
+## Tensorflow中屏蔽输出的log信息方法 
+tensorflow中可以通过配置环境变量 'TF_CPP_MIN_LOG_LEVEL' 的值，控制tensorflow是否屏蔽通知信息、警告、报错等输出信息。 
+```Python
+import os
+import tensorflow as tf
+os.environ['TF_CPP_MIN_LOG_LEVEL'] = '3'  # or any {'0', '1', '2'}
+``` 
+**NT:**  
+TF_CPP_MIN_LOG_LEVEL 取值0:0也是默认值，输出所有信息;TF_CPP_MIN_LOG_LEVEL取值1:屏蔽通知信息 
+TF_CPP_MIN_LOG_LEVEL 取值2:屏蔽通知信息和警告信息;TF_CPP_MIN_LOG_LEVEL取值3:屏蔽通知信息、警告信息和报错信息
+
 ## TensorFlow中一些常用函数的用法与区别
 **1.tf.argmax和tf.reduce_max**  
 tf.argmax(values,axis):返回values在axis维度最大值的索引  
