--- a/笔记.md
+++ b/笔记.md
@@ -35,8 +35,10 @@ import tensorflow as tf
 os.environ['TF_CPP_MIN_LOG_LEVEL'] = '3'  # or any {'0', '1', '2'}
 ``` 
 **NT:**  
-TF_CPP_MIN_LOG_LEVEL 取值0:0也是默认值，输出所有信息;TF_CPP_MIN_LOG_LEVEL取值1:屏蔽通知信息 
-TF_CPP_MIN_LOG_LEVEL 取值2:屏蔽通知信息和警告信息;TF_CPP_MIN_LOG_LEVEL取值3:屏蔽通知信息、警告信息和报错信息
+TF_CPP_MIN_LOG_LEVEL 取值0:0也是默认值，输出所有信息。 
+TF_CPP_MIN_LOG_LEVEL取值1:屏蔽通知信息。  
+TF_CPP_MIN_LOG_LEVEL 取值2:屏蔽通知信息和警告信息。 
+TF_CPP_MIN_LOG_LEVEL取值3:屏蔽通知信息、警告信息和报错信息。
 
 ## TensorFlow中一些常用函数的用法与区别
 **1.tf.argmax和tf.reduce_max**  
